Fixed alignment of the main nav

--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ nav ul, nav li {
 #top nav.header-menu ul {
 	background-color:blue;
 	display: inline-block;
+	padding: 8px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
 #top nav.header-menu li {
 	float:left;
